<resources>
    <string name="app_name">SpinWheel</string>
    <string name="spin">Spin</string>
    <string name="todo">TODO</string>
    <string name="menu">Menu</string>
    <string name="drink_roulette">Drink Roulette</string>
    <string name="near_me">Near Me</string>
    <string name="news_feed">News Feed</string>
    <string name="title_activity_near_me">Places Near Me</string>
    <string name="get_place">Get place</string>
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">dMBXgSqrO3BBFf4bDH0ttTU1X</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">H8r4d58XbFUJSf5J80Rt6B5I1C5Ba78pccEeehMPyZT1fNh0b3</string>
</resources>
