<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#306E33"
    tools:context=".Menu">

    <Button
        android:id="@+id/NewsFeed"
        android:layout_width="300dp"
        android:layout_height="160dp"
        android:background="#F44336"
        android:text="@string/news_feed"
        android:textColor="#FFEB3B"
        android:textSize="36sp"
        android:typeface="serif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NearMe" />

    <Button
        android:id="@+id/NearMe"
        android:layout_width="300dp"
        android:layout_height="160dp"
        android:background="#0B0B0B"
        android:text="@string/near_me"
        android:textColor="#FFEB3B"
        android:textSize="36sp"
        android:typeface="serif"
        app:layout_constraintBottom_toTopOf="@+id/NewsFeed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SpinWheel" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drink_roulette"
        android:textColor="#FFEB3B"
        android:textSize="36sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/SpinWheel"
        android:layout_width="300dp"
        android:layout_height="160dp"
        android:background="#F44336"
        android:text="Spin!!!"
        android:textColor="#FFEB3B"
        android:textSize="36sp"
        android:typeface="serif"
        app:layout_constraintBottom_toTopOf="@+id/NearMe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
</androidx.constraintlayout.widget.ConstraintLayout>